<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="vs.in.de.uni_ulm.mreuter.login.activity.NewKeyActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_activity_new_key"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/textView4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="10dp"
        android:layout_below="@id/textView3"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:id="@+id/textView5"
        android:layout_below="@id/textView4"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="10dp"
        android:layout_alignParentBottom="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_edit"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:hint="@string/username_hint"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/website_edit"
        android:inputType="textWebEmailAddress"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/username_edit"
        android:layout_alignRight="@+id/username_edit"
        android:hint="@string/website_hint"/>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/created_view"
        android:layout_below="@id/textView5"
        android:padding="10dp"/>-->

</RelativeLayout>
