<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/textView"
        android:layout_below="@+id/textView3"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:id="@+id/textView2"
        android:layout_alignLeft="@+id/textView"
        android:layout_below="@+id/textView"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/username_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:text="TextView" />

    <TextView
        android:id="@+id/website_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/username_info"
        android:text="TextView" />

    <TextView
        android:id="@+id/incoming_challenge_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_dialog_incoming_challenge"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/textView2"
        android:padding="5dp"/>
    

</RelativeLayout>